Fix events display on mobile

--- a/app/assets/stylesheets/site/components/events-list.scss
+++ b/app/assets/stylesheets/site/components/events-list.scss
@@ -21,6 +21,7 @@
     margin: 0;
 
     .event {
+      max-width: none;
       padding: 0;
       margin-bottom: 15px;
     }
